z-index Corrected for Header and Arrows

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     position: absolute;
     width: 100%;
     height: 65px;
-    z-index: 3;
+    z-index: 5;
     display: grid;
     place-items: center;
     background: rgba(13, 107, 165, 0.3);
@@ -143,7 +143,7 @@
     padding: 400px 45px 0 45px;
     max-width: 820px;
     margin: 0 60px;
-    z-index: 2;
+    z-index: 4;
 }
 
 .gallery-wrapper {
